# cybulde-data-preparation

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
cybulde/: process_data.py  train_tokenizer.py
cybulde/configs/: data_processing_config.yaml  tokenizer_training_config.yaml
cybulde/configs/automatically_generated/: data_processing_config.pickle  data_processing_config.yaml  tokenizer_training_config.pickle  tokenizer_training_config.yaml
cybulde/configs/dask_cluster/: local_dask_cluster.yaml
cybulde/configs/dataset_cleaner_manager/: simple_dataset_cleaner.yaml
cybulde/configs/dataset_reader_manager/: ghc_jigsaw_twitter.yaml
cybulde/configs/dataset_reader_manager/dataset_reader/: twitter.yaml
cybulde/configs/tokenizer/: bpe_tokenizer.yaml
cybulde/configs_schemas/: data_processing_config_schema.py  tokenizer_training_config_schema.py
cybulde/configs_schemas/dask_cluster/: dask_cluster_schema.py
cybulde/configs_schemas/data_processing/: dataset_cleaners_schema.py  dataset_readers_schema.py
cybulde/configs_schemas/infrastructure/: gcp_schema.py
cybulde/configs_schemas/tokenization/: decoder_schema.py  model_schema.py  normalizer_schema.py  post_processors_schema.py  pre_tokenizer_schema.py  tokenizer_schema.py  trainer_schema.py
cybulde/data_processing/: dataset_cleaners.py  dataset_readers.py
cybulde/tokenization/: tokenizers.py
cybulde/utils/: config_utils.py  data_utils.py  gcp_utils.py  io_utils.py  schema_utils.py  utils.py
docker/: Dockerfile
notebooks/: checking_stuff.ipynb  eda-ghc.ipynb  eda-jtc.ipynb  eda-processed.ipynb  eda-twitter.ipynb
